--- a/Views/Home/ListResponses.cshtml
+++ b/Views/Home/ListResponses.cshtml
@@ -2,6 +2,7 @@
    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
 </head>
 <body>
    <h2> Guest List</h2>
-   <table>
+   <table>  <!--Print a list of guests-->
       <thead>
          <tr>
             <th>First Name</th>
