--- a/Views/Home/MyView.cshtml
+++ b/Views/Home/MyView.cshtml
@@ -11,12 +11,14 @@
 <head>
    <meta name="viewport" content="width=device-width" />
    <title>Index</title>
+   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body>
-   <div>
-      @ViewBag.Greeting World
-      <p>We're going to have an exciting party.</p>
-      <a asp-action="RsvpForm">RSVP Now</a>   <!--This link will send user to rsvp form-->
+   <div class="text-center">
+      <h3>@ViewBag.Greeting everyone,</h3>
+      <h3>We're going to have an exciting party!</h3>
+      <h4>And you are invited</h4>
+      <a class="btn btn-primary" asp-action="RsvpForm">RSVP Now</a>   <!--This link will send user to rsvp form-->
    </div>
 </body>
 </html>
