--- a/Views/Home/RsvpForm.cshtml
+++ b/Views/Home/RsvpForm.cshtml
@@ -13,36 +13,46 @@
 <head>
    <meta name="viewport" content="width=device-width" />
    <title>RSVP Form</title>
-   <link rel="stylesheet" href="/css/styles.css"
+   <link rel="stylesheet" href="/css/styles.css" />
+   <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
-   <form asp-action="RsvpForm" method="post">
-      <div asp-validation-summary="All"></div>
-      <p>
-         <label asp-for="FirstName">First Name:</label>
-         <input asp-for="FirstName" />
-      </p>
-      <p>
-         <label asp-for="LastName">Last Name:</label>
-         <input asp-for="LastName" />
-      </p>
-      <p>
-         <label asp-for="Email">Email:</label>
-         <input asp-for="Email" />
-      </p>
-      <p>
-         <label asp-for="Phone">Phone:</label>
-         <input asp-for="Phone" />
-      </p>
-      <p>
-         <label>Will you attend?</label>
-         <select asp-for="WillAttend">
-            <option value="">Choose an option</option>
-            <option value="true">Yes, I will attend</option>
-            <option value="false">No, I can't come</option>
-         </select>
-      </p>
-      <button type="submit">Submit RSVP</button>
-   </form>
+   <div class="container mt-3">
+      <div class="card-header text-center"><h4>RSVP Form</h4></div>
+      <div class="card-body">
+         <form class="p-3" asp-action="RsvpForm" method="post">
+            <div asp-validation-summary="All"></div>
+            <div class="mb-3">
+               <label asp-for="FirstName">First Name:</label>
+               <input class="form-control" asp-for="FirstName" placeholder="Your First Name"/>
+            </div>
+            <div class="mb-3">
+               <label asp-for="LastName">Last Name:</label>
+               <input class="form-control" asp-for="LastName" placeholder="Your Last Name"/>
+            </div>
+            <div class="mb-3">
+               <label asp-for="Email">Email:</label>
+               <input class="form-control" asp-for="Email" placeholder="Your Email"/>
+            </div>
+            <div class="mb-3">
+               <label asp-for="Phone">Phone:</label>
+               <input class="form-control" asp-for="Phone" placeholder="206-XXX-XXXX" />
+            </div>
+            <div class="mb-3">
+               <label>Will you attend?</label>
+               <select class="form-control" asp-for="WillAttend">
+                  <option value="">Choose an option</option>
+                  <option value="true">Yes, I'll be there</option>
+                  <option value="false">No, I can't come</option>
+               </select>
+            </div>
+            <div class="text-center">
+               <button class="btn btn-primary" type="submit">
+                  Submit RSVP
+               </button>
+            </div>
+         </form>
+      </div>
+   </div>
 </body>
 </html>
