--- a/Views/Home/Thanks.cshtml
+++ b/Views/Home/Thanks.cshtml
@@ -13,8 +13,9 @@
 <head>
    <meta name="viewport" content="width=device-width" />
    <title>Thanks</title>
+   <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
-<body>
+<body class="text-center">
    <p>
       <h1>Thank you, @Model.FirstName!</h1>
       @if (Model.WillAttend == true)
@@ -26,6 +27,6 @@
          @:Sorry to hear you can't make it , but thanks for letting us know.
       }
    </p>
-   <p>Click <a asp-action="ListResponses">here</a> to see who is coming</p> 
+   Click <a class="nav-link" style="display: inline; padding: 0;" asp-action="ListResponses">here</a> to see who is coming 
 </body>
 </html>
